# teltonika2owntracks

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
teltonika_owntracks/: __init__.py  __main__.py  movement_detector.py  nmea_listener.py  owntracks_message.py  owntracks_publisher.py  point_calculations.py  settings.py  time_deque.py  utils.py
tests/: test_movement_detector.py  test_owntracks_message.py  test_point_calculations.py  test_time_deque.py
